--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,6 @@
 .wrap{
     width: 100%;
     height: 100vh;
-    background-color: #444444;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,17 +13,22 @@
     padding: 50px 0 50px 0;
     color: #fff;
     font-weight: 600;
+    font-size: 30px;
 }
 
 .input__wrapper{
     width: 700px;
-    height: 500px;
-    background-color: ghostwhite;
+    height: 150px;
     border-radius: 8px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+}
+
+#ucid__nickname{
+    margin-bottom: 20px;
 }
 
 .input__nickname{
@@ -35,15 +39,6 @@
     margin-right: 10px;
 }
 
-.input__search{
-    width: 80px;
-    height: 40px;
-    border: 0;
-    border-radius: 5px;
-    color: #fff;
-    background-color: #444444;
-    cursor: pointer;
-}
 
 #result{
     width: 700px;
@@ -52,18 +47,21 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 10px;
+    padding: 20px;
 }
 
 .result__item__wrapper{
-    background-color: ghostwhite;
     border: 0;
     border-radius: 5px;
     padding: 15px;
     text-align: center;
-    width: 300px;
+    width: calc((100%/2) - 40px);
     margin-top: 8px;
     cursor: pointer;
+}
+
+.result__maplegg__icon{
+    margin-bottom: 15px;
 }
 
 .result__nickname{
@@ -84,3 +82,4 @@
     font-size: 22px;
     font-weight: 700;
 }
+
