--- a/styles/index.css
+++ b/styles/index.css
@@ -43,7 +43,7 @@
 #result{
     width: 700px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
